# db2-mcp-server

./: .pre-commit-config.yaml  Dockerfile  PROJECT_RULES.md  README.md  TABLE_METADATA_GUIDE.md  USER_GUIDELINES.md  design.md  pyproject.toml  sample_users_table.txt
.github/workflows/: release.yml
.trae/rules/: project_rules.md
docs/: DYNAMIC_PROMPTS.md
examples/: data_explainer_demo.py  dynamic_prompts_example.py  prompts_config.json  table_metadata_cli.py  table_metadata_storage_demo.py  test_data_explainer.py  test_data_retriever.py
src/db2_mcp_server/: core.py  logger.py
src/db2_mcp_server/tools/: list_tables.py
tests/: test_core.py  test_logger.py  test_metadata_retrieval.py
tests/prompts/: __init__.py  test_dynamic_loader.py
tests/storage/: __init__.py  test_table_metadata.py
tests/tools/: test_list_tables.py
